# ADAN

./: .gitignore  CMakeLists.txt  README.md  grammar.ebnf  main.cc  makefile  version.txt
.github/skills/mggu/: SKILL.md
blueprints/: lexer-changes.txt
docs/: LOWERING_CHEATSHEET.md  LOWERING_EXAMPLE.md  LOWERING_SKELETON_CODE.md  LOWERING_TUTORIAL.md  binary-ops.md  comments.md  functions.md  if.md  loops.md  types.md  unary-ops.md  variables.md  vm-overview.txt
docs/language/: binary-operators.md  binary-ops.md  comments.md  export.md  functions.md  if.md  import.md  loops.md  todo.md  types.md  unary-ops.md  variables.md
docs/source/: lexer-usage.md  symbol-table-usage.md
errors/: errors.cc  errors.hh
errors/scanner/: lexer-errors.hh
front-end/: tokens.cc  tokens.hh
front-end/cst/: cst.hh
front-end/parser/: parser.cc  parser.hh
front-end/scanner/: lexer.cc  lexer.hh
front-end/sym-table/: sym-info.hh  sym-table.cc  sym-table.hh  sym.cc  sym.hh  type.cc  type.hh
middle-end/: ast.hh
samples/: hello-world.adn  preview.adn
src/: main.py
src/backend/VM/: __init__.py  dispatch.py  frame.py  vm.py
src/backend/bytecode/: __init__.py  chunk.py  instr.py  opcode.hpp  opcode.py
src/backend/lowering/: __init__.py  emitter.cpp  emitter.hpp  (+8 more)
src/front-end/: tokens.h++
src/middlend/: __init__.py
src/utils/: errors.py
tests/: cases.cc  cases.hh  lexer-tests.cc  lexer-tests.hh  lexer.cc  suite.cc  suite.hh
tests/scanner/: lexer-tests.cc
toolkit/: bump.sh  dump-docs.sh  format.sh  lazy-git.sh
utility/: errors.cc  errors.hh  fsys.cc  fsys.hh
(+42 files in other folders)
